<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.sword.demo.ui.fragment.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="breed"
            android:defaultValue="@null"
            app:argType="com.sword.demo.network.models.Breed"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sword.demo.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.sword.demo.ui.fragment.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>
</navigation>